# set10108

./: .gitignore  README.md
cw/: README.md
cw/report/: Concurrent and Parallel Systems CW2.docx
cw/src/: CMakeLists.txt  main_mpi_openmp.cpp
practicals/chapter1/: guarded.hpp  guardedpi.cpp  guardedpi.hpp  main_chap1_2.cpp  main_chap1_3.cpp  main_chap1_4.cpp  main_chap1_7.cpp  main_chap1_8.cpp  main_chap1_8_1_linear_find.cpp  main_chap1_8_1_quicksort.cpp  main_chap1_8_2.cpp  main_chap1challenge.cpp  threadsafe_stack.cpp
practicals/chapter2/: guarded.cpp  guarded.hpp  main_chap2_1.cpp  main_chap2_11_2.cpp  main_chap2_2.cpp  main_chap2_3.cpp  main_chap2_4.cpp  main_chap2_5.cpp  main_chap2_6.cpp  main_chap2_7.cpp  main_chap2_7_3.cpp  main_chap2_8_1.cp  main_chap2_8_2.cpp  main_chap2_9.cpp  main_chap_2_11_2.cpp  main_chap_2_11_3.cpp  main_chap_2_11_4.cpp  main_chap_2_8_1_log.cpp
practicals/chapter3/: main_3_1.cpp  main_3_2_2.cpp  main_3_3_1.cpp  main_3_5_1.cpp  main_3_6_1.cpp  main_queue_3_8.cpp
practicals/chapter4/: main_4_1.cpp  main_chap_4_2.cpp  main_chap_4_3.cpp
practicals/chapter5/: main_chap_5_2.cpp  main_chap_5_5.cpp  main_chap_5_5_v2.cpp  main_chap_5_6.cpp  main_chap_5_7.cpp  main_chap_5_8.cpp  main_chap_5_9_2.cpp
practicals/chapter7/: kernel.cl  kernel_matrix_multi.cl  main_7_1.cpp  main_7_2.cpp  main_7_3.cpp  main_7_4.cpp  main_7_5.cpp  main_7_6.cpp
practicals/chapter9/: main_9_1_1.cpp
